[gd_scene load_steps=10 format=3 uid="uid://biwc1cdumlpuu"]

[ext_resource type="Script" uid="uid://df368h0kiuowv" path="res://CP+Fin/drapeau_fin.gd" id="1_lh57a"]
[ext_resource type="Texture2D" uid="uid://4ylcje648l80" path="res://base de donné image/kenney_pixel-platformer/Tiles/tile_0112.png" id="2_3umwg"]
[ext_resource type="Texture2D" uid="uid://crkdoqlcfuha4" path="res://base de donné image/kenney_pixel-platformer/Tiles/tile_0111_green.png" id="2_lh57a"]
[ext_resource type="Texture2D" uid="uid://b1ck85iirf80i" path="res://base de donné image/kenney_pixel-platformer/Tiles/tile_0111.png" id="3_lh57a"]
[ext_resource type="Texture2D" uid="uid://86j5227fulo3" path="res://base de donné image/kenney_pixel-platformer/Tiles/tile_0112_green.png" id="3_veai8"]
[ext_resource type="Texture2D" uid="uid://6p0ctpookjjl" path="res://base de donné image/kenney_pixel-platformer/Tiles/tile_0131_grand.png" id="4_veai8"]
[ext_resource type="AudioStream" uid="uid://cpne7pyi4gyao" path="res://Son/winning-82808.mp3" id="7_veai8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lh57a"]
size = Vector2(20, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_t7myr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lh57a")
}, {
"duration": 1.0,
"texture": ExtResource("3_veai8")
}],
"loop": true,
"name": &"Green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3umwg")
}, {
"duration": 1.0,
"texture": ExtResource("3_lh57a")
}],
"loop": true,
"name": &"Red",
"speed": 5.0
}]

[node name="DrapeauFin" type="Node2D"]
script = ExtResource("1_lh57a")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 30)
shape = SubResource("RectangleShape2D_lh57a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
position = Vector2(6, -35)
sprite_frames = SubResource("SpriteFrames_t7myr")
animation = &"Red"
autoplay = "Red"

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(0, 43.5)
scale = Vector2(1, 2.359375)
texture = ExtResource("4_veai8")

[node name="Haut" type="Marker2D" parent="."]
position = Vector2(6, -35)

[node name="Bas" type="Marker2D" parent="."]
position = Vector2(6, 96)

[node name="Musique_Fin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_veai8")
volume_db = -23.797

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="level_completed" from="." to="." method="_on_level_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
